; ModuleID = '/home/carl/AnghaBench/lab/engine/code/botlib/extr_be_aas_move.c_AAS_SetMovedir.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/botlib/extr_be_aas_move.c_AAS_SetMovedir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VEC_UP = common dso_local global i32 0, align 4
@MOVEDIR_UP = common dso_local global i32 0, align 4
@VEC_DOWN = common dso_local global i32 0, align 4
@MOVEDIR_DOWN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AAS_SetMovedir(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @VEC_UP, align 4
  %7 = call i64 @VectorCompare(i32 %5, i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load i32, i32* @MOVEDIR_UP, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @VectorCopy(i32 %10, i32 %11)
  br label %27

13:                                               ; preds = %2
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @VEC_DOWN, align 4
  %16 = call i64 @VectorCompare(i32 %14, i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %13
  %19 = load i32, i32* @MOVEDIR_DOWN, align 4
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @VectorCopy(i32 %19, i32 %20)
  br label %26

22:                                               ; preds = %13
  %23 = load i32, i32* %3, align 4
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @AngleVectors(i32 %23, i32 %24, i32* null, i32* null)
  br label %26

26:                                               ; preds = %22, %18
  br label %27

27:                                               ; preds = %26, %9
  ret void
}

declare dso_local i64 @VectorCompare(i32, i32) #1

declare dso_local i32 @VectorCopy(i32, i32) #1

declare dso_local i32 @AngleVectors(i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
